--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.34",
     "jest": "^29.7.0",
     "typescript": "^5.5.4"
   }
